# Amazing-Flights

./: Makefile  README.md  main.py  pyproject.toml
flight_queries/: exaxmple_query.json
workflow/: database.py  query_handler.py  typing_utils.py  utils.py
workflow/configs/: api_config.json  dbconfig.json
workflow/flight_queries/: example.json
