[tool.poetry]
name = "amazing-flights"
version = "0.1.0"
description = "A data collection workflow using Amadeus API"
authors = ["George Manos <watchmedoctor@gmail.com>"]
readme = "README.md"
packages = [{include = "workflow"}]

[tool.poetry.dependencies]
python = "^3.10"
amadeus = "^9.0.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
